# physio_keylogger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  keylogger.spec  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: autoupdate.yml  deploy-compose.yml  deploy-helm.yml  poetry-tag.yml  pre-commit.yml
helm/: values.yaml
helm/templates/: deployment.yaml
keylogger/: cli.py  converter.py  gui.py  key.py  main.py
tests/: test_main_application.py
