[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "keylogger"
version = "0.1.0"
description = "The following code starts recording immediately upon launch and stops when Ctrl + C is pressed. It only works when run as a superuser and relies on the keyboard library."
authors = ["Aziz Ndiaye <a.ndiaye@catie.fr>"]
readme = "README.md"
packages = [{ include = "keylogger" }]

[tool.poetry.dev-dependencies]
pyinstaller = "^6.0.0"

[tool.poetry.scripts]
convert_key_to_csv = "keylogger.cli:convert_key_to_csv"


[tool.poetry.dependencies]
python = ">=3.8,<3.14"
keyboard = "^0.13.5"
click = "^8.1.7"
